project/visa/test/assembler/error/duplicated-macro.asm
macro var x
  sleep
  load $x, R0
end
macro var y
  sleep
  store R0, $y
end
var 1
